--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@babel/core": "7.4.3",
     "@kognifai/design-system": "^0.7.9",
     "@material-ui/core": "^4.4.0",
+    "@material-ui/icons": "^4.2.1",
     "@svgr/webpack": "4.1.0",
     "@typescript-eslint/eslint-plugin": "1.6.0",
     "@typescript-eslint/parser": "1.6.0",
