--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jest-resolve": "24.7.1",
     "jest-watch-typeahead": "0.3.0",
     "material-table": "^1.50.0",
+    "material-ui-dropzone": "^2.4.1",
     "mini-css-extract-plugin": "0.5.0",
     "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
