--- a/package.json
+++ b/package.json
@@ -48,8 +48,10 @@
     "postcss-normalize": "7.0.1",
     "postcss-preset-env": "6.6.0",
     "postcss-safe-parser": "4.0.1",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-app-polyfill": "^1.0.1",
+    "react-avatar": "^3.7.0",
     "react-dev-utils": "^9.0.1",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
