--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react": "^16.8.6",
     "react-app-polyfill": "^1.0.1",
     "react-avatar": "^3.7.0",
+    "react-datepicker": "^2.9.6",
     "react-dev-utils": "^9.0.1",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
