--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-app-polyfill": "^1.0.1",
     "react-avatar": "^3.7.0",
     "react-datepicker": "^2.9.6",
+    "react-dates": "^21.3.1",
     "react-dev-utils": "^9.0.1",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
