--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jest-resolve": "24.7.1",
     "jest-watch-typeahead": "0.3.0",
     "material-table": "^1.50.0",
+    "material-ui": "^0.20.2",
     "material-ui-dropzone": "^2.4.1",
     "mini-css-extract-plugin": "0.5.0",
     "node-sass": "^4.12.0",
@@ -61,6 +62,7 @@
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.1",
     "redux-form": "^8.2.6",
+    "redux-form-material-ui": "^4.3.4",
     "redux-thunk": "^2.3.0",
     "resolve": "1.10.0",
     "sass-loader": "^7.1.0",
